# xxscane

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  async_http.py  config.py  csrf.py  deep_engine.py  evasion.py  http_client.py  models.py  oast.py  scanner.py  waf.py
modules/: __init__.py  base.py  blind.py  crawler.py  dom.py  domform.py  fuzzer.py  llm_assist.py  navigator.py  paramminer.py  passive.py  reflected.py  stored.py
payloads/: __init__.py  encoders.py  generator.py  occurrence.py
tests/: test_auth_state.py  test_bloom.py  test_cli.py  test_csrf.py  test_evasion.py  test_exporter.py  test_integration.py  test_oast.py  test_occurrence.py  test_payloads.py
utils/: __init__.py  bloom.py  exporter.py  logger.py  reporter.py
xsscane/: __init__.py  __main__.py  cli.py
